Fixed cargo setup for liferay test
Upgraded cargo plugin to avoid OOM error on tomcat startup due to incorrect
Xmx and Xms settings.
Polished cargo configuration.
Filtered portal-setup-wizard.properties to setup liferay home path for the
running module.
Marked portlets as non instanceable to simplify automatic deploy.