@@ -21,13 +21,24 @@
     <properties>
         <liferay.version>7.4.3.5-ga5</liferay.version>
         <tomcat.version>9.0.56</tomcat.version>
+        <liferay.home.directory>
+            ${project.build.directory}/liferay-ce-portal-${liferay.version}
+        </liferay.home.directory>
+        <tomcat.home.directory>
+            ${liferay.home.directory}/tomcat-${tomcat.version}
+        </tomcat.home.directory>
+        <bundle.download.directory>${project.build.directory}
+        </bundle.download.directory>
+        <cargo.debug.port>5005</cargo.debug.port>
+        <cargo.timeout>120000</cargo.timeout>
 
         <javax.validation.version>2.0.0.Final</javax.validation.version>
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <project.reporting.outputEncoding>UTF-8
+        </project.reporting.outputEncoding>
 
         <vaadin.productionMode>true</vaadin.productionMode>
 
@@ -100,18 +111,44 @@
             <plugins>
                 <plugin>
                     <groupId>org.codehaus.cargo</groupId>
-                    <artifactId>cargo-maven2-plugin</artifactId>
-                    <version>1.7.7</version>
+                    <artifactId>cargo-maven3-plugin</artifactId>
+                    <version>1.9.10</version>
                     <configuration>
                         <container>
                             <containerId>tomcat9x</containerId>
-                            <home>${project.build.directory}/liferay-ce-portal-${liferay.version}/tomcat-${tomcat.version}</home>
+                            <home>${tomcat.home.directory}</home>
+                            <timeout>${cargo.timeout}</timeout>
                         </container>
-                        <type>existing</type>
+                        <configuration>
+                            <type>existing</type>
+                            <home>${tomcat.home.directory}</home>
+                            <properties>
+                                <cargo.start.jvmargs>
+                                    -Xdebug
+                                    -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=${cargo.debug.port}
+                                    -Xnoagent
+                                    -Dfile.encoding=UTF-8
+                                    -Djava.locale.providers=JRE,COMPAT,CLDR
+                                    -Djava.net.preferIPv4Stack=true
+                                    -Duser.timezone=GMT
+                                    -Xms2560m
+                                    -Xmx2560m
+                                    -XX:MaxNewSize=1536m
+                                    -XX:MaxMetaspaceSize=768m
+                                    -XX:MetaspaceSize=768m
+                                    -XX:NewSize=1536m
+                                    -XX:SurvivorRatio=7
+                                    -Djava.compiler=NONE
+                                    -Dvaadin.heartbeatInterval=15
+                                    -Dvaadin.portlet.static.resources.mapping=/o/vaadin-portlet-static/
+                                </cargo.start.jvmargs>
+                            </properties>
+                        </configuration>
+
                         <!-- Set an empty deployer so that cargo does not try to add the
                         current project's artifact to the container (as this was already
                         done by maven) -->
-                        <deployer />
+                        <deployer/>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -142,7 +179,9 @@
                                 <goal>war</goal>
                             </goals>
                             <configuration>
-                                <packagingExcludes>WEB-INF/classes/META-INF/VAADIN/build/**,VAADIN/</packagingExcludes>
+                                <packagingExcludes>
+                                    WEB-INF/classes/META-INF/VAADIN/build/**,VAADIN/
+                                </packagingExcludes>
                             </configuration>
                         </execution>
                         <execution>
@@ -152,12 +191,15 @@
                             </goals>
                             <configuration>
                                 <warName>vaadin-portlet-static</warName>
-                                <packagingIncludes>WEB-INF/lib/flow-client*.jar,WEB-INF/lib/vaadin-portlet*.jar,VAADIN/</packagingIncludes>
+                                <packagingIncludes>
+                                    WEB-INF/lib/flow-client*.jar,WEB-INF/lib/vaadin-portlet*.jar,VAADIN/
+                                </packagingIncludes>
 
                                 <webResources>
                                     <resource>
                                         <!-- this is relative to the pom.xml directory -->
-                                        <directory>target/classes/META-INF/</directory>
+                                        <directory>target/classes/META-INF/
+                                        </directory>
                                         <includes>
                                             <include>**</include>
                                         </includes>
@@ -169,6 +211,11 @@
                             </configuration>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <version>3.0.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -200,7 +247,7 @@
                     </plugin>
                     <plugin>
                         <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven2-plugin</artifactId>
+                        <artifactId>cargo-maven3-plugin</artifactId>
                         <executions>
                             <execution>
                                 <id>start-portal</id>
@@ -210,15 +257,30 @@
                                 </goals>
                             </execution>
                             <execution>
-                                <id>add-portlet</id>
-                                <phase>integration-test</phase>
-                            </execution>
-                            <execution>
                                 <id>stop-portal</id>
                                 <phase>post-integration-test</phase>
                                 <goals>
                                     <goal>stop</goal>
                                 </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>wait-for-liferay-start</id>
+                                <phase>pre-integration-test</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <target name="wait-liferay">
+                                        <echo>Wait for liferay start...</echo>
+                                        <sleep seconds="15" />
+                                    </target>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
@@ -257,7 +319,6 @@
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-antrun-plugin</artifactId>
-                            <version>1.6</version>
                             <executions>
                                 <execution>
                                     <id>download-files</id>
@@ -266,27 +327,55 @@
                                         <goal>run</goal>
                                     </goals>
                                     <configuration>
-                                        <tasks>
-                                            <!-- Uncomment this tag to enable
-                                             automatic download-->
-<!--                                            <get src="https://github.com/liferay/liferay-portal/releases/download/${liferay.version}/liferay-ce-portal-tomcat-${liferay.version}-20211221192828235.tar.gz"-->
-<!--                                                 dest="${project.build.directory}/liferay.tar.gz"-->
-<!--                                                 verbose="false" usetimestamp="true"/>-->
-                                            <untar src="${project.basedir}/liferay.tar.gz" compression="gzip" dest="${project.build.directory}"/>
+                                        <target name="setup-liferay">
+                                            <get src="https://github.com/liferay/liferay-portal/releases/download/${liferay.version}/liferay-ce-portal-tomcat-${liferay.version}-20211221192828235.tar.gz"
+                                                 dest="${bundle.download.directory}/liferay.tar.gz"
+                                                 verbose="false"
+                                                 usetimestamp="true"/>
+                                            <untar src="${bundle.download.directory}/liferay.tar.gz"
+                                                   compression="gzip"
+                                                   dest="${project.build.directory}"/>
+                                            <copy file="${project.basedir}/../liferay-portlet-deployer/target/liferay-portlet-deployer.war"
+                                                  todir="${liferay.home.directory}/osgi/war"/>
                                             <copy file="${project.build.directory}/${project.artifactId}.war"
-                                                  todir="${project.build.directory}/liferay-ce-portal-${liferay.version}/deploy"/>
+                                                  todir="${liferay.home.directory}/osgi/war"/>
                                             <copy file="${project.build.directory}/vaadin-portlet-static.war"
-                                                  todir="${project.build.directory}/liferay-ce-portal-${liferay.version}/deploy"/>
-<!--                                            <copy file="${project.basedir}/../liferay-portlet-deployer/target/liferay-portlet-deployer.war"-->
-<!--                                                  todir="${project.build.directory}/liferay-ce-portal-${liferay.version}/deploy"/>-->
-
-                                            <copy file="${project.basedir}/portal-setup-wizard.properties"
-                                                  todir="${project.build.directory}/liferay-ce-portal-${liferay.version}"/>
-                                            <copy file="${project.basedir}/setenv.sh"
-                                                  todir="${project.build.directory}/liferay-ce-portal-${liferay.version}/tomcat-${tomcat.version}/bin"/>
-                                            <copy file="${project.basedir}/setenv.bat"
-                                                  todir="${project.build.directory}/liferay-ce-portal-${liferay.version}/tomcat-${tomcat.version}/bin"/>
-                                        </tasks>
+                                                  todir="${liferay.home.directory}/osgi/war"/>
+                                        </target>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-resources-plugin</artifactId>
+                            <version>3.2.0</version>
+                            <executions>
+                                <execution>
+                                    <id>setup-liferay-env</id>
+                                    <phase>package</phase>
+                                    <goals>
+                                        <goal>copy-resources</goal>
+                                    </goals>
+                                    <configuration>
+                                        <outputDirectory>
+                                            ${liferay.home.directory}
+                                        </outputDirectory>
+                                        <propertiesEncoding>ISO-8859-1
+                                        </propertiesEncoding>
+                                        <resources>
+                                            <resource>
+                                                <directory>
+                                                    ${project.basedir}/src/test/liferay
+                                                </directory>
+                                                <filtering>true</filtering>
+                                                <includes>
+                                                    <include>
+                                                        portal-setup-wizard.properties
+                                                    </include>
+                                                </includes>
+                                            </resource>
+                                        </resources>
                                     </configuration>
                                 </execution>
                             </executions>
